# mdpow-molconfgen

./: .codecov.yml  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.md~  pyproject.toml  pyproject.toml~  setup.cfg  setup.py  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  gh-ci.yaml
confgen/: __init__.py  chem.py  sampler.py
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/development/: finding_minimas.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
molconfgen/: __init__.py  _version.py  analyze.py  chem.py  minima.py  output.py  sampler.py  workflows.py
molconfgen/data/: files.py
molconfgen/data/V39-butylacetate/: V39.top
molconfgen/tests/: check_v46_dihedrals.py  conftest.py  test_analyze.py  test_chem.py  test_minima.py  test_molconfgen.py  test_sampler.py  test_workflows.py
notebooks/: V39_conformer+minima_analysis.ipynb  V39_conformer_analysis.ipynb  conformer_generator-prototype.ipynb  conformer_generator.ipynb
notebooks/COW/: README.md
notebooks/COW/V36-methylacetate/: V36-methylacetate.mol2  V36-methylacetate.smi
notebooks/COW/V39-butylacetate/: V39-butylacetate.mol2  V39-butylacetate.smi
notebooks/COW/V46-2-methyl-1-nitrobenzene/: V46-2-methyl-1-nitrobenzene.smi
