[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdpow-molconfgen"
description = "Generation of conformers of small molecules."
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Oliver Beckstein", email = "orbeckst@gmail.com"},
]
maintainers = [
    {name = "Oliver Beckstein", email = "orbeckst@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
    "rdkit",
    "numpy",
    "tqdm",
    "gromacswrapper",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/becksteinlab/mdpow-molconfgen"
# documentation = "https://mdpow-molconfgen.readthedocs.io"

[tool.setuptools]
packages = ["molconfgen", "molconfgen.tests"]

[tool.versioningit]
vcs = "git"
default-version = "0.0.0"

[tool.versioningit.tag2version]
regex = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.versioningit.write]
file = "molconfgen/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mdpow-molconfgen/tests",
]

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.yapf]
column_limit = 80
indent_width = 4
use_tabs = false

[tool.flake8]
max_line_length = 80

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.sphinx]
all_files = 1
source_dir = "docs/"
build_dir = "docs/_build"
warning_is_error = 1
